--- a/EXERCICES/exercice1.html
+++ b/EXERCICES/exercice1.html
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-    <a href="https://www.lego.com/fr-fr/product/captain-jack-sparrows-pirate-ship-10365">Site préféré</a>
+    <a href="https://chatgpt.com/">Site préféré</a>
     <a href="https://google.fr">Site Google</a>
     <a href="https://amazon.com" target="_blank">Site Amazon dans un nouvel onglet</a>
 
@@ -29,7 +29,7 @@
     <div>
     <img src="cooky.jpg" alt="mon chihuahua" width="150" height="300">
     <img src="https://img-c.udemycdn.com/course/240x135/805992_d306_8.jpg" alt="image provenant de google">
-    <a href="https://lego.com"  ><img src="lego.png" alt="logo lego"</a>
+    <a href="https://lego.com"  ><img src="lego.png" alt="logo lego"></a>
     </div>
     
     <a href="suite.html" targer="_blank">Cliquez ici pour la suite</a>
